--- a/indexTimeSht.html
+++ b/indexTimeSht.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Employee Data Management</title>
   <script
-  src="https://code.jquery.com/jquery-3.2.1.slim.js"
-  integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg="
-  crossorigin="anonymous"></script>
+    src="https://code.jquery.com/jquery-3.2.1.slim.js"
+    integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg="
+    crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 
   <!-- Bootstrap -->
@@ -38,7 +38,7 @@
                                     <th>Start Date</th>
                                     <th>Months Worked</th>
                                     <th>Monthly Rate ($)</th>
-                                    <th>Total Billed ($)</th>
+                                    <th>Total Billed</th>
                                 </tr>
                             </thead>
                             <tbody class="schedTable">
@@ -68,8 +68,8 @@
                             <input type="text" class="form-control" id="roleInput">
                         </div>
                         <div class="form-group">
-                            <label for="text">Start Date (DD/MM/YY - ex. 01/01/89)</label>
-                            <input type="number" class="form-control" id="startInput">
+                            <label for="text">Start Date</label>
+                            <input type="number" class="form-control" id="startInput" placeholder="DD/MM/YY - ex. 01/01/89">
                         </div>
                         <div class="form-group">
                             <label for="text">Monthly Rate</label>
@@ -82,7 +82,7 @@
         </div>
     </div>
 </div>
-<script src="assets/script/script.js"></script>
-<script src="assets/script/moment.js"></script>
+<script src="script.js"></script>
+<script src="moment.js"></script>
 </body>
 </html>
