--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="form-group">
                             <label for="text">Start Date</label>
-                            <input type="number" class="form-control" id="startInput" placeholder="DD/MM/YY - ex. 01/01/89">
+                            <input type="number" class="form-control" id="startInput" placeholder="MM/DD/YYYY - ex. 01/01/1989">
                         </div>
                         <div class="form-group">
                             <label for="text">Monthly Rate</label>
